pyxl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELLIPSIS
    OMG
    OMGWTF
    TROOF
    WTF

Grammar

Rule 0     S' -> program
Rule 1     program -> HAI FLOAT NEWLINE statements KTHXBYE
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> command NEWLINE
Rule 5     statement -> command COMMA
Rule 6     command -> empty
Rule 7     command -> expr
Rule 8     command -> call
Rule 9     command -> cast
Rule 10    command -> decl
Rule 11    command -> assign_bukkit
Rule 12    command -> assign
Rule 13    command -> declare_bukkit_block
Rule 14    command -> if_else
Rule 15    command -> bukkit_function
Rule 16    command -> function
Rule 17    command -> return
Rule 18    command -> loop
Rule 19    command -> export
Rule 20    command -> import
Rule 21    loop -> IM IN YR variable operation YR variable condition expr NEWLINE statements IM OUTTA YR variable
Rule 22    operation -> UPPIN
Rule 23    operation -> NERFIN
Rule 24    condition -> TIL
Rule 25    condition -> WILE
Rule 26    import -> CAN HAS PATH QUESTION
Rule 27    export -> YOU CAN HAS sep_args MKAY
Rule 28    if_else -> O RLY QUESTION NEWLINE YA RLY NEWLINE statements NO WAI NEWLINE statements OIC
Rule 29    if_else -> O RLY QUESTION NEWLINE YA RLY NEWLINE statements OIC
Rule 30    if_else -> O RLY QUESTION NEWLINE YA RLY NEWLINE statements elifs NO WAI NEWLINE statements OIC
Rule 31    elifs -> elifs elif
Rule 32    elifs -> elif
Rule 33    elif -> MEBBE expr NEWLINE statements
Rule 34    decl -> I HAS A variable
Rule 35    decl -> I HAS A variable ITZ expr
Rule 36    decl -> I HAS A variable ITZ A type
Rule 37    declare_bukkit_block -> O HAI IM variable NEWLINE statements KTHX
Rule 38    assign_bukkit -> variable HAS A variable ITZ expr
Rule 39    assign -> variable R expr
Rule 40    expr -> variable APOSTROPHE_Z variable
Rule 41    cast -> variable IS NOW A type
Rule 42    cast -> variable R MAEK variable A type
Rule 43    cast -> variable R MAEK variable type
Rule 44    args -> args expr
Rule 45    args -> expr
Rule 46    sep_args -> sep_args AN expr
Rule 47    sep_args -> expr
Rule 48    sep_yr_args -> sep_yr_args AN YR expr
Rule 49    sep_yr_args -> expr
Rule 50    bukkit_function -> HOW IZ variable ID YR sep_yr_args NEWLINE statements IF U SAY SO
Rule 51    bukkit_function -> HOW IZ variable ID NEWLINE statements IF U SAY SO
Rule 52    function -> HOW IZ I ID YR sep_yr_args NEWLINE statements IF U SAY SO
Rule 53    function -> HOW IZ I ID NEWLINE statements IF U SAY SO
Rule 54    expr -> I IZ ID YR sep_yr_args MKAY
Rule 55    expr -> I IZ ID
Rule 56    expr -> variable IZ ID YR sep_yr_args MKAY
Rule 57    expr -> variable IZ ID
Rule 58    return -> FOUND YR expr
Rule 59    return -> GTFO
Rule 60    type -> YARN
Rule 61    type -> NUMBR
Rule 62    type -> NUMBAR
Rule 63    type -> NOOB
Rule 64    type -> BUKKIT
Rule 65    value -> STRING
Rule 66    value -> FLOAT
Rule 67    value -> INTEGER
Rule 68    value -> WIN
Rule 69    value -> FAIL
Rule 70    value -> DICT
Rule 71    call -> VISIBLE args
Rule 72    call -> VISIBLE args EXCLAMATION
Rule 73    call -> GIMMEH variable
Rule 74    expr -> SIZE OF expr
Rule 75    expr -> ABSLUT OF expr
Rule 76    expr -> value
Rule 77    expr -> variable
Rule 78    expr -> SUM OF expr AN expr
Rule 79    expr -> DIFF OF expr AN expr
Rule 80    expr -> PRODUKT OF expr AN expr
Rule 81    expr -> QUOSHUNT OF expr AN expr
Rule 82    expr -> MOD OF expr AN expr
Rule 83    expr -> BIGGR OF expr AN expr
Rule 84    expr -> SMALLR OF expr AN expr
Rule 85    expr -> BOTH OF expr AN expr
Rule 86    expr -> EITHER OF expr AN expr
Rule 87    expr -> WON OF expr AN expr
Rule 88    expr -> NOT expr
Rule 89    expr -> ALL OF sep_args MKAY
Rule 90    expr -> ANY OF sep_args MKAY
Rule 91    expr -> ALL OF args MKAY
Rule 92    expr -> ANY OF args MKAY
Rule 93    expr -> BOTH SAEM expr AN expr
Rule 94    expr -> DIFFRINT expr AN expr
Rule 95    expr -> SMOOSH sep_args MKAY
Rule 96    expr -> SMOOSH args MKAY
Rule 97    expr -> MAEK expr A type
Rule 98    expr -> MAEK expr type
Rule 99    variable -> ID
Rule 100   variable -> IT
Rule 101   program -> error
Rule 102   empty -> <empty>

Terminals, with rules where they appear

A                    : 34 35 36 36 38 41 42 97
ABSLUT               : 75
ALL                  : 89 91
AN                   : 46 48 78 79 80 81 82 83 84 85 86 87 93 94
ANY                  : 90 92
APOSTROPHE_Z         : 40
BIGGR                : 83
BOTH                 : 85 93
BUKKIT               : 64
CAN                  : 26 27
COMMA                : 5
DICT                 : 70
DIFF                 : 79
DIFFRINT             : 94
EITHER               : 86
ELLIPSIS             : 
EXCLAMATION          : 72
FAIL                 : 69
FLOAT                : 1 66
FOUND                : 58
GIMMEH               : 73
GTFO                 : 59
HAI                  : 1 37
HAS                  : 26 27 34 35 36 38
HOW                  : 50 51 52 53
I                    : 34 35 36 52 53 54 55
ID                   : 50 51 52 53 54 55 56 57 99
IF                   : 50 51 52 53
IM                   : 21 21 37
IN                   : 21
INTEGER              : 67
IS                   : 41
IT                   : 100
ITZ                  : 35 36 38
IZ                   : 50 51 52 53 54 55 56 57
KTHX                 : 37
KTHXBYE              : 1
MAEK                 : 42 43 97 98
MEBBE                : 33
MKAY                 : 27 54 56 89 90 91 92 95 96
MOD                  : 82
NERFIN               : 23
NEWLINE              : 1 4 21 28 28 28 29 29 30 30 30 33 37 50 51 52 53
NO                   : 28 30
NOOB                 : 63
NOT                  : 88
NOW                  : 41
NUMBAR               : 62
NUMBR                : 61
O                    : 28 29 30 37
OF                   : 74 75 78 79 80 81 82 83 84 85 86 87 89 90 91 92
OIC                  : 28 29 30
OMG                  : 
OMGWTF               : 
OUTTA                : 21
PATH                 : 26
PRODUKT              : 80
QUESTION             : 26 28 29 30
QUOSHUNT             : 81
R                    : 39 42 43
RLY                  : 28 28 29 29 30 30
SAEM                 : 93
SAY                  : 50 51 52 53
SIZE                 : 74
SMALLR               : 84
SMOOSH               : 95 96
SO                   : 50 51 52 53
STRING               : 65
SUM                  : 78
TIL                  : 24
TROOF                : 
U                    : 50 51 52 53
UPPIN                : 22
VISIBLE              : 71 72
WAI                  : 28 30
WILE                 : 25
WIN                  : 68
WON                  : 87
WTF                  : 
YA                   : 28 29 30
YARN                 : 60
YOU                  : 27
YR                   : 21 21 21 48 50 52 54 56 58
error                : 101

Nonterminals, with rules where they appear

args                 : 44 71 72 91 92 96
assign               : 12
assign_bukkit        : 11
bukkit_function      : 15
call                 : 8
cast                 : 9
command              : 4 5
condition            : 21
decl                 : 10
declare_bukkit_block : 13
elif                 : 31 32
elifs                : 30 31
empty                : 6
export               : 19
expr                 : 7 21 33 35 38 39 44 45 46 47 48 49 58 74 75 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 93 93 94 94 97 98
function             : 16
if_else              : 14
import               : 20
loop                 : 18
operation            : 21
program              : 0
return               : 17
sep_args             : 27 46 89 90 95
sep_yr_args          : 48 50 52 54 56
statement            : 2 3
statements           : 1 2 21 28 28 29 30 30 33 37 50 51 52 53
type                 : 36 41 42 43 97 98
value                : 76
variable             : 21 21 21 34 35 36 37 38 38 39 40 40 41 42 42 43 43 50 51 56 57 73 77

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . HAI FLOAT NEWLINE statements KTHXBYE
    (101) program -> . error

    HAI             shift and go to state 2
    error           shift and go to state 3

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> HAI . FLOAT NEWLINE statements KTHXBYE

    FLOAT           shift and go to state 4


state 3

    (101) program -> error .

    $end            reduce using rule 101 (program -> error .)


state 4

    (1) program -> HAI FLOAT . NEWLINE statements KTHXBYE

    NEWLINE         shift and go to state 5


state 5

    (1) program -> HAI FLOAT NEWLINE . statements KTHXBYE
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . command NEWLINE
    (5) statement -> . command COMMA
    (6) command -> . empty
    (7) command -> . expr
    (8) command -> . call
    (9) command -> . cast
    (10) command -> . decl
    (11) command -> . assign_bukkit
    (12) command -> . assign
    (13) command -> . declare_bukkit_block
    (14) command -> . if_else
    (15) command -> . bukkit_function
    (16) command -> . function
    (17) command -> . return
    (18) command -> . loop
    (19) command -> . export
    (20) command -> . import
    (102) empty -> .
    (40) expr -> . variable APOSTROPHE_Z variable
    (54) expr -> . I IZ ID YR sep_yr_args MKAY
    (55) expr -> . I IZ ID
    (56) expr -> . variable IZ ID YR sep_yr_args MKAY
    (57) expr -> . variable IZ ID
    (74) expr -> . SIZE OF expr
    (75) expr -> . ABSLUT OF expr
    (76) expr -> . value
    (77) expr -> . variable
    (78) expr -> . SUM OF expr AN expr
    (79) expr -> . DIFF OF expr AN expr
    (80) expr -> . PRODUKT OF expr AN expr
    (81) expr -> . QUOSHUNT OF expr AN expr
    (82) expr -> . MOD OF expr AN expr
    (83) expr -> . BIGGR OF expr AN expr
    (84) expr -> . SMALLR OF expr AN expr
    (85) expr -> . BOTH OF expr AN expr
    (86) expr -> . EITHER OF expr AN expr
    (87) expr -> . WON OF expr AN expr
    (88) expr -> . NOT expr
    (89) expr -> . ALL OF sep_args MKAY
    (90) expr -> . ANY OF sep_args MKAY
    (91) expr -> . ALL OF args MKAY
    (92) expr -> . ANY OF args MKAY
    (93) expr -> . BOTH SAEM expr AN expr
    (94) expr -> . DIFFRINT expr AN expr
    (95) expr -> . SMOOSH sep_args MKAY
    (96) expr -> . SMOOSH args MKAY
    (97) expr -> . MAEK expr A type
    (98) expr -> . MAEK expr type
    (71) call -> . VISIBLE args
    (72) call -> . VISIBLE args EXCLAMATION
    (73) call -> . GIMMEH variable
    (41) cast -> . variable IS NOW A type
    (42) cast -> . variable R MAEK variable A type
    (43) cast -> . variable R MAEK variable type
    (34) decl -> . I HAS A variable
    (35) decl -> . I HAS A variable ITZ expr
    (36) decl -> . I HAS A variable ITZ A type
    (38) assign_bukkit -> . variable HAS A variable ITZ expr
    (39) assign -> . variable R expr
    (37) declare_bukkit_block -> . O HAI IM variable NEWLINE statements KTHX
    (28) if_else -> . O RLY QUESTION NEWLINE YA RLY NEWLINE statements NO WAI NEWLINE statements OIC
    (29) if_else -> . O RLY QUESTION NEWLINE YA RLY NEWLINE statements OIC
    (30) if_else -> . O RLY QUESTION NEWLINE YA RLY NEWLINE statements elifs NO WAI NEWLINE statements OIC
    (50) bukkit_function -> . HOW IZ variable ID YR sep_yr_args NEWLINE statements IF U SAY SO
    (51) bukkit_function -> . HOW IZ variable ID NEWLINE statements IF U SAY SO
    (52) function -> . HOW IZ I ID YR sep_yr_args NEWLINE statements IF U SAY SO
    (53) function -> . HOW IZ I ID NEWLINE statements IF U SAY SO
    (58) return -> . FOUND YR expr
    (59) return -> . GTFO
    (21) loop -> . IM IN YR variable operation YR variable condition expr NEWLINE statements IM OUTTA YR variable
    (27) export -> . YOU CAN HAS sep_args MKAY
    (26) import -> . CAN HAS PATH QUESTION
    (99) variable -> . ID
    (100) variable -> . IT
    (65) value -> . STRING
    (66) value -> . FLOAT
    (67) value -> . INTEGER
    (68) value -> . WIN
    (69) value -> . FAIL
    (70) value -> . DICT

    NEWLINE         reduce using rule 102 (empty -> .)
    COMMA           reduce using rule 102 (empty -> .)
    I               shift and go to state 26
    SIZE            shift and go to state 28
    ABSLUT          shift and go to state 29
    SUM             shift and go to state 31
    DIFF            shift and go to state 32
    PRODUKT         shift and go to state 33
    QUOSHUNT        shift and go to state 34
    MOD             shift and go to state 35
    BIGGR           shift and go to state 36
    SMALLR          shift and go to state 37
    BOTH            shift and go to state 38
    EITHER          shift and go to state 39
    WON             shift and go to state 40
    NOT             shift and go to state 41
    ALL             shift and go to state 42
    ANY             shift and go to state 43
    DIFFRINT        shift and go to state 44
    SMOOSH          shift and go to state 45
    MAEK            shift and go to state 46
    VISIBLE         shift and go to state 47
    GIMMEH          shift and go to state 48
    O               shift and go to state 49
    HOW             shift and go to state 51
    FOUND           shift and go to state 52
    GTFO            shift and go to state 53
    IM              shift and go to state 50
    YOU             shift and go to state 54
    CAN             shift and go to state 55
    ID              shift and go to state 27
    IT              shift and go to state 56
    STRING          shift and go to state 57
    FLOAT           shift and go to state 6
    INTEGER         shift and go to state 58
    WIN             shift and go to state 59
    FAIL            shift and go to state 60
    DICT            shift and go to state 61

    statements                     shift and go to state 7
    statement                      shift and go to state 8
    command                        shift and go to state 9
    empty                          shift and go to state 10
    expr                           shift and go to state 11
    call                           shift and go to state 12
    cast                           shift and go to state 13
    decl                           shift and go to state 14
    assign_bukkit                  shift and go to state 15
    assign                         shift and go to state 16
    declare_bukkit_block           shift and go to state 17
    if_else                        shift and go to state 18
    bukkit_function                shift and go to state 19
    function                       shift and go to state 20
    return                         shift and go to state 21
    loop                           shift and go to state 22
    export                         shift and go to state 23
    import                         shift and go to state 24
    variable                       shift and go to state 25
    value                          shift and go to state 30

state 6

    (66) value -> FLOAT .

    NEWLINE         reduce using rule 66 (value -> FLOAT .)
    COMMA           reduce using rule 66 (value -> FLOAT .)
    AN              reduce using rule 66 (value -> FLOAT .)
    MKAY            reduce using rule 66 (value -> FLOAT .)
    I               reduce using rule 66 (value -> FLOAT .)
    SIZE            reduce using rule 66 (value -> FLOAT .)
    ABSLUT          reduce using rule 66 (value -> FLOAT .)
    SUM             reduce using rule 66 (value -> FLOAT .)
    DIFF            reduce using rule 66 (value -> FLOAT .)
    PRODUKT         reduce using rule 66 (value -> FLOAT .)
    QUOSHUNT        reduce using rule 66 (value -> FLOAT .)
    MOD             reduce using rule 66 (value -> FLOAT .)
    BIGGR           reduce using rule 66 (value -> FLOAT .)
    SMALLR          reduce using rule 66 (value -> FLOAT .)
    BOTH            reduce using rule 66 (value -> FLOAT .)
    EITHER          reduce using rule 66 (value -> FLOAT .)
    WON             reduce using rule 66 (value -> FLOAT .)
    NOT             reduce using rule 66 (value -> FLOAT .)
    ALL             reduce using rule 66 (value -> FLOAT .)
    ANY             reduce using rule 66 (value -> FLOAT .)
    DIFFRINT        reduce using rule 66 (value -> FLOAT .)
    SMOOSH          reduce using rule 66 (value -> FLOAT .)
    MAEK            reduce using rule 66 (value -> FLOAT .)
    ID              reduce using rule 66 (value -> FLOAT .)
    IT              reduce using rule 66 (value -> FLOAT .)
    STRING          reduce using rule 66 (value -> FLOAT .)
    FLOAT           reduce using rule 66 (value -> FLOAT .)
    INTEGER         reduce using rule 66 (value -> FLOAT .)
    WIN             reduce using rule 66 (value -> FLOAT .)
    FAIL            reduce using rule 66 (value -> FLOAT .)
    DICT            reduce using rule 66 (value -> FLOAT .)
    A               reduce using rule 66 (value -> FLOAT .)
    YARN            reduce using rule 66 (value -> FLOAT .)
    NUMBR           reduce using rule 66 (value -> FLOAT .)
    NUMBAR          reduce using rule 66 (value -> FLOAT .)
    NOOB            reduce using rule 66 (value -> FLOAT .)
    BUKKIT          reduce using rule 66 (value -> FLOAT .)
    EXCLAMATION     reduce using rule 66 (value -> FLOAT .)


state 7

    (1) program -> HAI FLOAT NEWLINE statements . KTHXBYE
    (2) statements -> statements . statement
    (4) statement -> . command NEWLINE
    (5) statement -> . command COMMA
    (6) command -> . empty
    (7) command -> . expr
    (8) command -> . call
    (9) command -> . cast
    (10) command -> . decl
    (11) command -> . assign_bukkit
    (12) command -> . assign
    (13) command -> . declare_bukkit_block
    (14) command -> . if_else
    (15) command -> . bukkit_function
    (16) command -> . function
    (17) command -> . return
    (18) command -> . loop
    (19) command -> . export
    (20) command -> . import
    (102) empty -> .
    (40) expr -> . variable APOSTROPHE_Z variable
    (54) expr -> . I IZ ID YR sep_yr_args MKAY
    (55) expr -> . I IZ ID
    (56) expr -> . variable IZ ID YR sep_yr_args MKAY
    (57) expr -> . variable IZ ID
    (74) expr -> . SIZE OF expr
    (75) expr -> . ABSLUT OF expr
    (76) expr -> . value
    (77) expr -> . variable
    (78) expr -> . SUM OF expr AN expr
    (79) expr -> . DIFF OF expr AN expr
    (80) expr -> . PRODUKT OF expr AN expr
    (81) expr -> . QUOSHUNT OF expr AN expr
    (82) expr -> . MOD OF expr AN expr
    (83) expr -> . BIGGR OF expr AN expr
    (84) expr -> . SMALLR OF expr AN expr
    (85) expr -> . BOTH OF expr AN expr
    (86) expr -> . EITHER OF expr AN expr
    (87) expr -> . WON OF expr AN expr
    (88) expr -> . NOT expr
    (89) expr -> . ALL OF sep_args MKAY
    (90) expr -> . ANY OF sep_args MKAY
    (91) expr -> . ALL OF args MKAY
    (92) expr -> . ANY OF args MKAY
    (93) expr -> . BOTH SAEM expr AN expr
    (94) expr -> . DIFFRINT expr AN expr
    (95) expr -> . SMOOSH sep_args MKAY
    (96) expr -> . SMOOSH args MKAY
    (97) expr -> . MAEK expr A type
    (98) expr -> . MAEK expr type
    (71) call -> . VISIBLE args
    (72) call -> . VISIBLE args EXCLAMATION
    (73) call -> . GIMMEH variable
    (41) cast -> . variable IS NOW A type
    (42) cast -> . variable R MAEK variable A type
    (43) cast -> . variable R MAEK variable type
    (34) decl -> . I HAS A variable
    (35) decl -> . I HAS A variable ITZ expr
    (36) decl -> . I HAS A variable ITZ A type
    (38) assign_bukkit -> . variable HAS A variable ITZ expr
    (39) assign -> . variable R expr
    (37) declare_bukkit_block -> . O HAI IM variable NEWLINE statements KTHX
    (28) if_else -> . O RLY QUESTION NEWLINE YA RLY NEWLINE statements NO WAI NEWLINE statements OIC
    (29) if_else -> . O RLY QUESTION NEWLINE YA RLY NEWLINE statements OIC
    (30) if_else -> . O RLY QUESTION NEWLINE YA RLY NEWLINE statements elifs NO WAI NEWLINE statements OIC
    (50) bukkit_function -> . HOW IZ variable ID YR sep_yr_args NEWLINE statements IF U SAY SO
    (51) bukkit_function -> . HOW IZ variable ID NEWLINE statements IF U SAY SO
    (52) function -> . HOW IZ I ID YR sep_yr_args NEWLINE statements IF U SAY SO
    (53) function -> . HOW IZ I ID NEWLINE statements IF U SAY SO
    (58) return -> . FOUND YR expr
    (59) return -> . GTFO
    (21) loop -> . IM IN YR variable operation YR variable condition expr NEWLINE statements IM OUTTA YR variable
    (27) export -> . YOU CAN HAS sep_args MKAY
    (26) import -> . CAN HAS PATH QUESTION
    (99) variable -> . ID
    (100) variable -> . IT
    (65) value -> . STRING
    (66) value -> . FLOAT
    (67) value -> . INTEGER
    (68) value -> . WIN
    (69) value -> . FAIL
    (70) value -> . DICT

    KTHXBYE         shift and go to state 62
    NEWLINE         reduce using rule 102 (empty -> .)
    COMMA           reduce using rule 102 (empty -> .)
    I               shift and go to state 26
    SIZE            shift and go to state 28
    ABSLUT          shift and go to state 29
    SUM             shift and go to state 31
    DIFF            shift and go to state 32
    PRODUKT         shift and go to state 33
    QUOSHUNT        shift and go to state 34
    MOD             shift and go to state 35
    BIGGR           shift and go to state 36
    SMALLR          shift and go to state 37
    BOTH            shift and go to state 38
    EITHER          shift and go to state 39
    WON             shift and go to state 40
    NOT             shift and go to state 41
    ALL             shift and go to state 42
    ANY             shift and go to state 43
    DIFFRINT        shift and go to state 44
    SMOOSH          shift and go to state 45
    MAEK            shift and go to state 46
    VISIBLE         shift and go to state 47
    GIMMEH          shift and go to state 48
    O               shift and go to state 49
    HOW             shift and go to state 51
    FOUND           shift and go to state 52
    GTFO            shift and go to state 53
    IM              shift and go to state 50
    YOU             shift and go to state 54
    CAN             shift and go to state 55
    ID              shift and go to state 27
    IT              shift and go to state 56
    STRING          shift and go to state 57
    FLOAT           shift and go to state 6
    INTEGER         shift and go to state 58
    WIN             shift and go to state 59
    FAIL            shift and go to state 60
    DICT            shift and go to state 61

    statement                      shift and go to state 63
    command                        shift and go to state 9
    empty                          shift and go to state 10
    expr                           shift and go to state 11
    call                           shift and go to state 12
    cast                           shift and go to state 13
    decl                           shift and go to state 14
    assign_bukkit                  shift and go to state 15
    assign                         shift and go to state 16
    declare_bukkit_block           shift and go to state 17
    if_else                        shift and go to state 18
    bukkit_function                shift and go to state 19
    function                       shift and go to state 20
    return                         shift and go to state 21
    loop                           shift and go to state 22
    export                         shift and go to state 23
    import                         shift and go to state 24
    variable                       shift and go to state 25
    value                          shift and go to state 30

state 8

    (3) statements -> statement .

    KTHXBYE         reduce using rule 3 (statements -> statement .)
    I               reduce using rule 3 (statements -> statement .)
    SIZE            reduce using rule 3 (statements -> statement .)
    ABSLUT          reduce using rule 3 (statements -> statement .)
    SUM             reduce using rule 3 (statements -> statement .)
    DIFF            reduce using rule 3 (statements -> statement .)
    PRODUKT         reduce using rule 3 (statements -> statement .)
    QUOSHUNT        reduce using rule 3 (statements -> statement .)
    MOD             reduce using rule 3 (statements -> statement .)
    BIGGR           reduce using rule 3 (statements -> statement .)
    SMALLR          reduce using rule 3 (statements -> statement .)
    BOTH            reduce using rule 3 (statements -> statement .)
    EITHER          reduce using rule 3 (statements -> statement .)
    WON             reduce using rule 3 (statements -> statement .)
    NOT             reduce using rule 3 (statements -> statement .)
    ALL             reduce using rule 3 (statements -> statement .)
    ANY             reduce using rule 3 (statements -> statement .)
    DIFFRINT        reduce using rule 3 (statements -> statement .)
    SMOOSH          reduce using rule 3 (statements -> statement .)
    MAEK            reduce using rule 3 (statements -> statement .)
    VISIBLE         reduce using rule 3 (statements -> statement .)
    GIMMEH          reduce using rule 3 (statements -> statement .)
    O               reduce using rule 3 (statements -> statement .)
    HOW             reduce using rule 3 (statements -> statement .)
    FOUND           reduce using rule 3 (statements -> statement .)
    GTFO            reduce using rule 3 (statements -> statement .)
    IM              reduce using rule 3 (statements -> statement .)
    YOU             reduce using rule 3 (statements -> statement .)
    CAN             reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    IT              reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    FLOAT           reduce using rule 3 (statements -> statement .)
    INTEGER         reduce using rule 3 (statements -> statement .)
    WIN             reduce using rule 3 (statements -> statement .)
    FAIL            reduce using rule 3 (statements -> statement .)
    DICT            reduce using rule 3 (statements -> statement .)
    NEWLINE         reduce using rule 3 (statements -> statement .)
    COMMA           reduce using rule 3 (statements -> statement .)
    KTHX            reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    NO              reduce using rule 3 (statements -> statement .)
    OIC             reduce using rule 3 (statements -> statement .)
    MEBBE           reduce using rule 3 (statements -> statement .)


state 9

    (4) statement -> command . NEWLINE
    (5) statement -> command . COMMA

    NEWLINE         shift and go to state 64
    COMMA           shift and go to state 65


state 10

    (6) command -> empty .

    NEWLINE         reduce using rule 6 (command -> empty .)
    COMMA           reduce using rule 6 (command -> empty .)


state 11

    (7) command -> expr .

    NEWLINE         reduce using rule 7 (command -> expr .)
    COMMA           reduce using rule 7 (command -> expr .)


state 12

    (8) command -> call .

    NEWLINE         reduce using rule 8 (command -> call .)
    COMMA           reduce using rule 8 (command -> call .)


state 13

    (9) command -> cast .

    NEWLINE         reduce using rule 9 (command -> cast .)
    COMMA           reduce using rule 9 (command -> cast .)


state 14

    (10) command -> decl .

    NEWLINE         reduce using rule 10 (command -> decl .)
    COMMA           reduce using rule 10 (command -> decl .)


state 15

    (11) command -> assign_bukkit .

    NEWLINE         reduce using rule 11 (command -> assign_bukkit .)
    COMMA           reduce using rule 11 (command -> assign_bukkit .)


state 16

    (12) command -> assign .

    NEWLINE         reduce using rule 12 (command -> assign .)
    COMMA           reduce using rule 12 (command -> assign .)


state 17

    (13) command -> declare_bukkit_block .

    NEWLINE         reduce using rule 13 (command -> declare_bukkit_block .)
    COMMA           reduce using rule 13 (command -> declare_bukkit_block .)


state 18

    (14) command -> if_else .

    NEWLINE         reduce using rule 14 (command -> if_else .)
    COMMA           reduce using rule 14 (command -> if_else .)


state 19

    (15) command -> bukkit_function .

    NEWLINE         reduce using rule 15 (command -> bukkit_function .)
    COMMA           reduce using rule 15 (command -> bukkit_function .)


state 20

    (16) command -> function .

    NEWLINE         reduce using rule 16 (command -> function .)
    COMMA           reduce using rule 16 (command -> function .)


state 21

    (17) command -> return .

    NEWLINE         reduce using rule 17 (command -> return .)
    COMMA           reduce using rule 17 (command -> return .)


state 22

    (18) command -> loop .

    NEWLINE         reduce using rule 18 (command -> loop .)
    COMMA           reduce using rule 18 (command -> loop .)


state 23

    (19) command -> export .

    NEWLINE         reduce using rule 19 (command -> export .)
    COMMA           reduce using rule 19 (command -> export .)


state 24

    (20) command -> import .

    NEWLINE         reduce using rule 20 (command -> import .)
    COMMA           reduce using rule 20 (command -> import .)


state 25

    (40) expr -> variable . APOSTROPHE_Z variable
    (56) expr -> variable . IZ ID YR sep_yr_args MKAY
    (57) expr -> variable . IZ ID
    (77) expr -> variable .
    (41) cast -> variable . IS NOW A type
    (42) cast -> variable . R MAEK variable A type
    (43) cast -> variable . R MAEK variable type
    (38) assign_bukkit -> variable . HAS A variable ITZ expr
    (39) assign -> variable . R expr

    APOSTROPHE_Z    shift and go to state 66
    IZ              shift and go to state 67
    NEWLINE         reduce using rule 77 (expr -> variable .)
    COMMA           reduce using rule 77 (expr -> variable .)
    IS              shift and go to state 68
    R               shift and go to state 69
    HAS             shift and go to state 70


state 26

    (54) expr -> I . IZ ID YR sep_yr_args MKAY
    (55) expr -> I . IZ ID
    (34) decl -> I . HAS A variable
    (35) decl -> I . HAS A variable ITZ expr
    (36) decl -> I . HAS A variable ITZ A type

    IZ              shift and go to state 71
    HAS             shift and go to state 72


state 27

    (99) variable -> ID .

    APOSTROPHE_Z    reduce using rule 99 (variable -> ID .)
    IZ              reduce using rule 99 (variable -> ID .)
    IS              reduce using rule 99 (variable -> ID .)
    R               reduce using rule 99 (variable -> ID .)
    HAS             reduce using rule 99 (variable -> ID .)
    NEWLINE         reduce using rule 99 (variable -> ID .)
    COMMA           reduce using rule 99 (variable -> ID .)
    AN              reduce using rule 99 (variable -> ID .)
    MKAY            reduce using rule 99 (variable -> ID .)
    I               reduce using rule 99 (variable -> ID .)
    SIZE            reduce using rule 99 (variable -> ID .)
    ABSLUT          reduce using rule 99 (variable -> ID .)
    SUM             reduce using rule 99 (variable -> ID .)
    DIFF            reduce using rule 99 (variable -> ID .)
    PRODUKT         reduce using rule 99 (variable -> ID .)
    QUOSHUNT        reduce using rule 99 (variable -> ID .)
    MOD             reduce using rule 99 (variable -> ID .)
    BIGGR           reduce using rule 99 (variable -> ID .)
    SMALLR          reduce using rule 99 (variable -> ID .)
    BOTH            reduce using rule 99 (variable -> ID .)
    EITHER          reduce using rule 99 (variable -> ID .)
    WON             reduce using rule 99 (variable -> ID .)
    NOT             reduce using rule 99 (variable -> ID .)
    ALL             reduce using rule 99 (variable -> ID .)
    ANY             reduce using rule 99 (variable -> ID .)
    DIFFRINT        reduce using rule 99 (variable -> ID .)
    SMOOSH          reduce using rule 99 (variable -> ID .)
    MAEK            reduce using rule 99 (variable -> ID .)
    ID              reduce using rule 99 (variable -> ID .)
    IT              reduce using rule 99 (variable -> ID .)
    STRING          reduce using rule 99 (variable -> ID .)
    FLOAT           reduce using rule 99 (variable -> ID .)
    INTEGER         reduce using rule 99 (variable -> ID .)
    WIN             reduce using rule 99 (variable -> ID .)
    FAIL            reduce using rule 99 (variable -> ID .)
    DICT            reduce using rule 99 (variable -> ID .)
    A               reduce using rule 99 (variable -> ID .)
    YARN            reduce using rule 99 (variable -> ID .)
    NUMBR           reduce using rule 99 (variable -> ID .)
    NUMBAR          reduce using rule 99 (variable -> ID .)
    NOOB            reduce using rule 99 (variable -> ID .)
    BUKKIT          reduce using rule 99 (variable -> ID .)
    EXCLAMATION     reduce using rule 99 (variable -> ID .)
    ITZ             reduce using rule 99 (variable -> ID .)
    UPPIN           reduce using rule 99 (variable -> ID .)
    NERFIN          reduce using rule 99 (variable -> ID .)
    TIL             reduce using rule 99 (variable -> ID .)
    WILE            reduce using rule 99 (variable -> ID .)


state 28

    (74) expr -> SIZE . OF expr

    OF              shift and go to state 73


state 29

    (75) expr -> ABSLUT . OF expr

    OF              shift and go to state 74


state 30

    (76) expr -> value .
